updating our details

--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
+        <p class='masthead-intro'>Hi I'm </p>
         <h1 class='masthead-heading'>Abe Rodgers</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an uptight Seattlite career bartender and father to a 7 year old boy.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in Minneaposis and Southern California and lived in Seattle for a decade, prior to being in Alaska for the past 6 years.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm into following the news cycle, bicycling, rollerblading, hiking, literature and seeing live concerts and standup shows.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A real deal bonafide software engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In my recently purchased home, located in the South Park neighborhood of Seattle</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Looking to transition into a challenging professional position that allows me to work banker's hours and gets me out from behind the bar</p>
     </section>
 
     <footer id="footer">
