updating our details

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <h1>Introduction</h1>
       <p>I'm an uptight Seattlite career bartender and father to a 7 year old boy.</p>
       <h1>Where I'm From</h1>
-      <p>I grew up in Minneaposis and Southern California and lived in Seattle for a decade, prior to being in Alaska for the past 6 years.</p>
+      <p>I grew up in Minneapolis and Southern California and lived in Seattle for a decade, prior to being in Alaska for the past 6 years.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I'm into following the news cycle, bicycling, rollerblading, hiking, literature and seeing live concerts and standup shows.</p>
+      <p>Following the news cycle, bicycling, rollerblading, hiking, literature and seeing live concerts and standup shows.</p>
       <h1>What's your dream job?</h1>
       <p>A real deal bonafide software engineer</p>
       <h1>Where do you live?</h1>
